feat: delete tenant member and session
